--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Main Content -->
     <main class="container">
         <center>
-            <p class="lead" style="font-weight: bold;">SPECIALLY FOR 林姐姐</p>
+            <a href="https://thomascomonicstechnology.github.io/tct/" class="lead" style="font-weight" target="_blank">Specially Prepared by TCT</a>
         </center>
         <br>
 
