--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <!-- Main Content -->
     <main class="container">
         <center>
-            <a href="https://thomascomonicstechnology.github.io/tct/" class="lead" style="font-weight" target="_blank">Specially Prepared by TCT</a>
+            <a href="https://thomascomonicstechnology.github.io/tct/" > TCT</a>
+            <p class="lead" style="font-weight" target="_blank">Specially Prepared by TCT</p>
         </center>
         <br>
 
