--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
     <!-- Main Content -->
     <main class="container">
         <center>
-            <a href="https://thomascomonicstechnology.github.io/tct/" > TCT</a>
-            <p class="lead" style="font-weight" target="_blank">Specially Prepared by TCT</p>
+            <a href="https://thomascomonicstechnology.github.io/tct/" target="_blank" rel="noopener noreferrer">
+                <p class="lead" style="font-weight: bold;">Specially Prepared by TCT</p>
+            </a>
         </center>
         <br>
 
