--- a/index.html
+++ b/index.html
@@ -69,8 +69,12 @@
     <!-- Main Content -->
     <main class="container">
         <center>
-            <a href="https://thomascomonicstechnology.github.io/tct/" target="_blank" rel="noopener noreferrer">
-                <p class="lead" style="font-weight: bold;">Specially Prepared by TCT</p>
+            <a href="https://thomascomonicstechnology.github.io/tct/"
+               target="_blank"
+               rel="noopener noreferrer"
+               class="lead"
+               style="font-weight: bold; text-decoration: none; color: #0d6efd;">
+               Specially Prepared by TCT
             </a>
         </center>
         <br>
